Code changes for bug Not showing error messages in matterdashboard page and showing typeahead issue in create matter and manage permission page (#538)
* Code changes for error handling in manage permissions and create matter page.

* updating appsettings

* Code changes for bug Not showing error messages in matterdashboard page ,typeahead control issue in create matter and manage permission page.

* Code changes for to disable tab click during load in matter dashboard

--- a/tree/master/cloud/src/solution/Microsoft.Legal.MatterCenter.Web/wwwroot/css/viewspecific/CreateMatter.css
+++ b/tree/master/cloud/src/solution/Microsoft.Legal.MatterCenter.Web/wwwroot/css/viewspecific/CreateMatter.css
@@ -1540,6 +1540,9 @@ left: -17px;
 .colorRed{
     color:red;
 }
+.fontSize875em{
+       font-size: 0.875em;
+}
 
 
 
